@@ -16,6 +16,7 @@ UDT SHARE 0.6
   - Change default alignment of allocated memory to 4 byte for x86 8 byte to x64
   - Fix maybe incorrect casting from unsigned to uint32_t value in SharedMemorySocket
   - Change sequence of searching library in CDynamicModule
+  - Fix bug creating posix thread 
   
 >>>>>>> 3a2b21d... see changelog
 UDT SHARE 0.5
